# micro-graph

./: README.md  example.py  pyproject.toml
examples/: ai_agent.py
examples/agents/: main.py  planner.py
micro_graph/: __init__.py  micro_graph.py  output_writer.py
micro_graph/ai/: llm_generation.py  openai_server.py  types.py
